# hushwarren

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yaml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  discovery.rs  duration.rs  main.rs  output.rs  types.rs
crates/cli/tests/: e2e_cli.rs  fake_server.rs  integration_cli.rs
crates/core/: Cargo.toml
crates/core/src/: catalog.rs  config.rs  decision.rs  domain.rs  lib.rs  parse.rs  querylog.rs  rebind.rs  rules.rs
crates/daemon/: Cargo.toml
crates/daemon/assets/dashboard/: app.js  index.html  style.css
crates/daemon/src/: app.rs  dns.rs  inbound_tls.rs  lib.rs  lists.rs  main.rs  mdns.rs  metrics.rs  odoh.rs  padding.rs  profiles.rs  rollup.rs  state_dir.rs  upstream.rs
crates/daemon/src/api/: auth.rs  mod.rs  routes.rs  types.rs
crates/daemon/src/platform/: linux.rs  macos.rs  mod.rs  stub.rs  unsupported.rs  windows.rs
crates/daemon/src/sentinel/: breaker.rs  mod.rs  takeover.rs  watch.rs
crates/daemon/tests/: api_integration.rs  dot_integration.rs  e2e_binary.rs  ecs_test.rs  integration.rs  live_doh.rs  live_https_ech.rs  live_lists.rs  network_guard_integration.rs  odoh_integration.rs  padding_integration.rs  portal_integration.rs  privacy_integration.rs  sentinel_integration.rs
crates/tray/: Cargo.toml
crates/tray/src/: client.rs  discovery.rs  icon.rs  main.rs  state.rs
crates/tray/tests/: e2e_once.rs
docs/: architecture.md  network-guard.md  os-integration.md  privacy-roadmap.md  user-guide.md  zero-touch-ux.md
specs/: standards.md  wp1-core.md  wp10-tray.md  wp11-windows.md  wp12-packaging.md  wp13-network-guard.md  wp14-nice.md  wp2-daemon.md  wp3-api-cli.md  wp4-privacy.md  wp5-sentinel-macos.md  wp7-odoh-ecs.md  wp8-transport-privacy.md  wp9-dashboard-rollup.md
