[package]
name = "hush-cli"
description = "hush — control CLI for hushwarren (talks to hushd's localhost API)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hush"
path = "src/main.rs"

[dependencies]
anyhow      = "1.0"
clap        = { version = "4.5", features = ["derive"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2.0"
tokio       = { version = "1.45", features = ["rt", "rt-multi-thread", "macros"] }
tracing     = "0.1"

[dev-dependencies]
assert_cmd   = "2.0"
axum         = { version = "0.8", features = [] }
predicates   = "3.1"
serde_json   = "1.0"
tempfile     = "3.14"
tokio        = { version = "1.45", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util", "process"] }
hush-core  = { path = "../core", version = "0.0.1" }

[lints]
workspace = true
